# CMakePractice

./: .gitmessage.txt
0103/testChatClient/: CMakeLists.txt
0103/testChatServer/: CMakeLists.txt
0108/Server/: CMakeLists.txt  README.md
